# templateproject

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/platform/: platform.h  platform_detect.h
include/platform/macos/: macos_platform.h
src/: CMakeLists.txt  main.cpp
src/platform/: platform_factory.cpp
src/platform/macos/: macos_platform.cpp
tests/: CMakeLists.txt  main_test.cpp
